[package]
name = "cryptopals"
version = "0.1.0"
edition = "2024"
default-run = "run_set_01"

[dependencies]
itertools = "0.14"         # itertools to iterate through large datasets
hex = "0.4"                # HEX (mainly for checking)
base64 = "0.22.1"          # Base64 (mainly for checking)
aes = "0.8.4"              # AES block cipher
block-modes = "0.9"        # CBC, ECB, etc.
block-padding = "0.3"      # For PKCS7 padding

[workspace]
members = [
    "set_01",
]

[[bin]]
name = "run_set_01"
path = "set_01/run_set_01.rs"

[[bin]]
name = "cryptopals_01"
path = "set_01/cryptopals_01.rs"

[[bin]]
name = "cryptopals_02"
path = "set_01/cryptopals_02.rs"

[[bin]]
name = "cryptopals_03"
path = "set_01/cryptopals_03.rs"

[[bin]]
name = "cryptopals_04"
path = "set_01/cryptopals_04.rs"

[[bin]]
name = "cryptopals_05"
path = "set_01/cryptopals_05.rs"

[[bin]]
name = "cryptopals_06"
path = "set_01/cryptopals_06.rs"

[[bin]]
name = "cryptopals_07"
path = "set_01/cryptopals_07.rs"