[package]
name = "cryptopals"
version = "0.1.0"
edition = "2024"
default-run = "run_all"

[dependencies]
rand = "0.8"               # secure OS RNG (uses getrandom under the hood)
zeroize = "1.5"            # zero memory on drop (optional, recommended)
hex = "0.4"                # HEX (mainly for checking)
base64 = "0.22.1"          # Base64 (mainly for checking)
itertools = "0.14.0"       # itertools to iterate through large datasets
aes = "0.8.4"

[workspace]
members = [
    "set_01", "set_02"
]

[[bin]]
name = "run_all"
path = "run_cryptopals.rs"

[[bin]]
name = "run_set_01"
path = "set_01/run_set_01.rs"

[[bin]]
name = "cryptopals_01"
path = "set_01/cryptopals_01.rs"

[[bin]]
name = "cryptopals_02"
path = "set_01/cryptopals_02.rs"

[[bin]]
name = "cryptopals_03"
path = "set_01/cryptopals_03.rs"

[[bin]]
name = "cryptopals_04"
path = "set_01/cryptopals_04.rs"

[[bin]]
name = "cryptopals_05"
path = "set_01/cryptopals_05.rs"

[[bin]]
name = "cryptopals_06"
path = "set_01/cryptopals_06.rs"

[[bin]]
name = "cryptopals_07"
path = "set_01/cryptopals_07.rs"

[[bin]]
name = "cryptopals_08"
path = "set_01/cryptopals_08.rs"

[[bin]]
name = "run_set_02"
path = "set_02/run_set_02.rs"

[[bin]]
name = "cryptopals_09"
path = "set_02/cryptopals_09.rs"

[[bin]]
name = "cryptopals_10"
path = "set_02/cryptopals_10.rs"

[[bin]]
name = "cryptopals_11"
path = "set_02/cryptopals_11.rs"

[[bin]]
name = "cryptopals_12"
path = "set_02/cryptopals_12.rs"
