[package]
name = "set_02"
version = "0.1.0"
edition = "2024"
default-run = "run_set_02"

[dependencies]
cryptopals = { path = "../../cryptopals" }

[[bin]]
name = "run_set_02"
path = "run_set_02.rs"

[[bin]]
name = "cryptopals_09"
path = "cryptopals_09.rs"

[[bin]]
name = "cryptopals_10"
path = "cryptopals_10.rs"

[[bin]]
name = "cryptopals_11"
path = "cryptopals_11.rs"

[[bin]]
name = "cryptopals_12"
path = "cryptopals_12.rs"

[[bin]]
name = "cryptopals_13"
path = "cryptopals_13.rs"

[[bin]]
name = "cryptopals_14"
path = "cryptopals_14.rs"